re-arranging iterator code